# Dmac-alt

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  BYTEROVER.md  FINAL_INTEGRATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MAINTENANCE.md  MCP_CONTEXT_FORGE_DEPLOYMENT_GUIDE.md  MCP_CONTEXT_FORGE_SYSTEM_VALIDATION_SUITES.md  MONITORING_MAINTENANCE_PROCEDURES.md  Phase1_Summary_Report.md  README.md  README_MCP_TESTS.md  README_mcp_config.md  TROUBLESHOOTING.md  Test-ArchonMcpSimple.ps1  Test-ArchonMcpTools.ps1  advanced_context_fusion.py  agent_collaboration_monitor.py  archon_mcp_comprehensive_test_20250903_233301.json  archon_mcp_test_results_20250903_233108.json  archon_mcp_test_results_20250905_205240.json  archon_mcp_test_results_20250905_205419.json  archon_mcp_test_results_20250905_205650.json  archon_mcp_test_results_20250905_211308.json  archon_mcp_test_results_20250905_211457.json  archon_mcp_test_results_20250905_211647.json  archon_mcp_test_results_20250905_212041.json  archon_mcp_test_results_20250905_212130.json  archon_mcp_test_results_20250905_212409.json  archon_mcp_test_results_20250905_220440.json  archon_mcp_test_results_20250905_220744.json  archon_mcp_test_results_20250905_222655.json  archon_mcp_test_results_20250905_222847.json  archon_orchestration_verification.py  archon_task_workflow_1757112770.json  archon_task_workflow_1757113675.json  archon_task_workflow_1757113897.json  (+35 more)
.byterover_offline/: 20250903T223559821715_byterover-create-project.json
.codacy/: codacy.yaml
.github/: copilot-instructions.md
(+128 files in other folders)
