[tool.poetry]
name = "dmac-alt"
version = "0.1.0"
description = "Minimal MCP client demo"
authors = ["Dmac Demo <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
